fix account drop down menu shows behind navbar

--- a/frontend/src/scss/layout/_header.scss
+++ b/frontend/src/scss/layout/_header.scss
@@ -152,7 +152,7 @@
           gap: 1em;
           padding: 1em;
           border-radius: 10px;
-          z-index: 10;
+          z-index: 50;
           button {
             cursor: pointer;
             background: $grd-main;
@@ -203,7 +203,6 @@
     background: whitesmoke;
     box-shadow: $boxShadow;
     transform: translateY(-35px);
-    z-index: -20;
     transition: 0.5s ease, visibility 0.1s;
     // visibility: hidden;
     .navbar-item {
